# wix-integration-frappe

./: .gitignore  LICENSE  MANIFEST.in  README.md  modules.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
wix_integration/: hooks.py  patches.txt
wix_integration/api/: customers.py  dashboard.py  webhooks.py
wix_integration/doctype/wix_customer_mapping/: wix_customer_mapping.py
wix_integration/doctype/wix_integration_settings/: wix_integration_settings.json  wix_integration_settings.py
wix_integration/doctype/wix_product_mapping/: wix_product_mapping.json
wix_integration/patches/v1_0/: create_default_settings.py  setup_custom_fields.py
wix_integration/public/js/: dashboard.js
wix_integration/wix_integration/api/: orders.py  products.py
wix_integration/wix_integration/doctype/wix_customer_mapping/: wix_customer_mapping.json
wix_integration/wix_integration/doctype/wix_order_sync_log/: wix_order_sync_log.json  wix_order_sync_log.py
wix_integration/wix_integration/doctype/wix_product_mapping/: wix_product_mapping.py
wix_integration/wix_integration/public/css/: dashboard.css
wix_integration/wix_integration/tasks/: sync_inventory.py  sync_orders.py  sync_products.py
wix_integration/wix_integration/utils/: wix_client.py
wix_integration/wix_integration/www/dashboard/: index.html
