[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wix_integration"
version = "1.0.0"
description = "Wix ecommerce integration for unified CRM, inventory management, and order processing"
authors = [
    {name = "Chinmay Bhatk", email = "chinmaybhatk@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment", 
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "frappe>=14.0.0",
    "erpnext>=14.0.0", 
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "cryptography>=3.4.8",
    "loguru>=0.6.0",
    "pydantic>=1.10.0",
    "ratelimit>=2.2.1",
]

[project.urls]
Homepage = "https://github.com/chinmaybhatk/wix-integration-frappe"
Repository = "https://github.com/chinmaybhatk/wix-integration-frappe.git"
Documentation = "https://github.com/chinmaybhatk/wix-integration-frappe#readme"
"Bug Reports" = "https://github.com/chinmaybhatk/wix-integration-frappe/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wix_integration*"]

[tool.setuptools.package-data]
wix_integration = ["*.json", "*.js", "*.css", "*.html", "*.png", "*.svg", "*.ico", "*.txt", "*.md"]