[metadata]
name = wix_integration
version = 1.0.0
description = Wix ecommerce integration for unified CRM, inventory management, and order processing
long_description = file: README.md
long_description_content_type = text/markdown
author = KokoFresh
author_email = admin@kokofresh.in
license = MIT
license_files = LICENSE
url = https://github.com/chinmaybhatk/wix-integration-frappe
project_urls =
    Bug Reports = https://github.com/chinmaybhatk/wix-integration-frappe/issues
    Source = https://github.com/chinmaybhatk/wix-integration-frappe
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Frappe
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Office/Business :: Financial :: Accounting

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    frappe>=14.0.0
    erpnext>=14.0.0
    requests>=2.28.0
    python-dateutil>=2.8.0
    cryptography>=3.4.8
    loguru>=0.6.0
    pydantic>=1.10.0
    ratelimit>=2.2.1

[options.packages.find]
include = wix_integration*

[options.package_data]
wix_integration = *.json, *.js, *.css, *.html, *.png, *.svg, *.ico, *.txt, *.md